Bug 214419 - ipfw coredump when try to add rule with table of IPv6 addresses
Summary: ipfw coredump when try to add rule with table of IPv6 addresses
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 11.0-STABLE
Hardware: amd64 Any
: --- Affects Only Me
Assignee: freebsd-ipfw (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-11 10:26 UTC by Erokhin Konstantin
Modified: 2016-11-22 10:10 UTC (History)
1 user (show)

See Also:


Attachments
steps, logs, backtrace (3.12 KB, text/plain)
2016-11-11 10:26 UTC, Erokhin Konstantin
no flags Details
GDB output (1.05 KB, text/plain)
2016-11-14 11:57 UTC, Erokhin Konstantin
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erokhin Konstantin 2016-11-11 10:26:01 UTC
Created attachment 176891 [details]
steps, logs, backtrace

Trying to add rule into ipfw with table of IPv6 addresses produces coredump.
But if I add single rule for IPv6 address ipfw acts normal.
Machine has IPv6 address on interface? but it does not matter. Without IPv6 on any interface I got the same coredump.


How to reproduce:
     kldload ipfw
     ipfw table 1 create
     ipfw table 1 add 2a03:2480::/32
     ipfw add allow ip6 from 'table(1)' to me6 keep-state

Expected result:
     00XXX allow ip6 from table(1) to me6 keep-state

Actual result:
     Segmentation fault (core dumped)
Comment 1 Andrey V. Elsukov freebsd_committer freebsd_triage 2016-11-12 04:58:47 UTC
It looks like your system isn't 11.0-STABLE.
Do you have option VIMAGE in the kernel config?
If so, it's probably the same problem that was described and fixed in https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=212649
Comment 2 Erokhin Konstantin 2016-11-14 11:57:37 UTC
(In reply to Andrey V. Elsukov from comment #1)
Switched to r308635, GENERIC kernel. Same problem with coredump.
Comment 3 Erokhin Konstantin 2016-11-14 11:57:59 UTC
Created attachment 176990 [details]
GDB output
Comment 4 commit-hook freebsd_committer freebsd_triage 2016-11-15 07:14:18 UTC
A commit references this bug:

Author: ae
Date: Tue Nov 15 07:13:17 UTC 2016
New revision: 308673
URL: https://svnweb.freebsd.org/changeset/base/308673

Log:
  Add missing support of named lookup tables to the IPv6 code.

  PR:		214419
  MFC after:	1 week
  Sponsored by:	Yandex LLC

Changes:
  head/sbin/ipfw/ipfw2.c
  head/sbin/ipfw/ipfw2.h
  head/sbin/ipfw/ipv6.c
Comment 5 Erokhin Konstantin 2016-11-15 10:14:23 UTC
(In reply to commit-hook from comment #4)
Tested on head/308673 problem fixed.
Comment 6 commit-hook freebsd_committer freebsd_triage 2016-11-22 10:10:06 UTC
A commit references this bug:

Author: ae
Date: Tue Nov 22 10:09:04 UTC 2016
New revision: 308970
URL: https://svnweb.freebsd.org/changeset/base/308970

Log:
  MFC r308673:
    Add missing support of named lookup tables to the IPv6 code.

    PR:		214419

Changes:
_U  stable/11/
  stable/11/sbin/ipfw/ipfw2.c
  stable/11/sbin/ipfw/ipfw2.h
  stable/11/sbin/ipfw/ipv6.c