MFC r308673:   Add missing support of named lookup tables to the IPv6 code.

PR:		214419


Former-commit-id: 335ac144d0d628346e09384876c5acd0d448c586