sbin/ipfw/ipfw2.c
@@ -15001,11 +15001,11 @@ block|}
 end_function
 
 begin_function
-specifier|static
 name|void
 name|fill_table
 parameter_list|(
-name|ipfw_insn
+name|struct
+name|_ipfw_insn
 modifier|*
 name|cmd
 parameter_list|,
@@ -18902,6 +18902,8 @@ argument_list|,
 name|av
 argument_list|,
 name|cblen
+argument_list|,
+name|tstate
 argument_list|)
 expr_stmt|;
 comment|/* XXX: should check for IPv4, not !IPv6 */
@@ -19124,6 +19126,8 @@ argument_list|,
 name|av
 argument_list|,
 name|cblen
+argument_list|,
+name|tstate
 argument_list|)
 expr_stmt|;
 comment|/* XXX: should check for IPv4, not !IPv6 */
@@ -23565,6 +23569,8 @@ operator|*
 name|av
 argument_list|,
 name|cblen
+argument_list|,
+name|tstate
 argument_list|)
 condition|)
 block|{
@@ -23591,6 +23597,8 @@ operator|*
 name|av
 argument_list|,
 name|cblen
+argument_list|,
+name|tstate
 argument_list|)
 condition|)
 block|{
